# mxx_processor

./: ReID_viewer.py  humandataset_market_train.pkl  humandataset_market_train.yaml  pyproject.toml  setup.cfg  test.py
src/mxx_processor/: __init__.py  util.py
src/mxx_processor.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/mxx_processor/ReID/: __init__.py  dataset.py  processor.py
src/mxx_processor/ReID/object/: __init__.py  annotation.py  img.py  person.py  video.py
src/mxx_processor/ReID/set/: __init__.py  img_set.py  person_set.py  set_base.py  video_set.py
src/mxx_processor/ReID/utils/: SYSU-MM01.py  __init__.py  mars.py  msmt17.py  save_data.py  util.py
src/mxx_processor/log/: logger.py
