[metadata]
name = mxx_processor
version = 0.1.0
description = A processor for ReID and related tasks
author = maxiaoxiao
author_email = maxiaoxsi@email.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://your.project.url

[options]
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src 

